[package]
name = "gql"
version = "0.1.0"
edition = "2021"
authors = [ "geoffsee <>" ]

[features]
default = ["local"]
local = []

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "server"
path = "src/lib.rs"



[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "ws"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
juniper = { version = "0.16.1" }
serde_json = "1.0.140"
tungstenite = { version = "0.26.2", features = ["http"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.30"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
juniper_subscriptions = "0.17.0"
