[package]
name = "gql"
version = "0.1.0"
edition = "2021"
authors = [ "geoffsee <>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
juniper = "0.16.1"
serde_json = "1.0.140"
anyhow = "1.0.98"
futures = "0.3.31"
